--- a/assignment2.html
+++ b/assignment2.html
@@ -107,7 +107,7 @@
   }
 
 #about {
-  background: #f8fafc; /* light background */
+  background: #f8fafc; 
   padding: 60px 20px;
   text-align: center;
 }
@@ -396,7 +396,7 @@ p {
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
-          src="photo-1583364501903-49485df18877.avif"
+          src="images/photo-1583364501903-49485df18877.avif"
           class="d-block w-100" alt="no photo acces">
           <div class="carousel-caption d-none d-md-block">
     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
@@ -405,7 +405,7 @@ p {
         </div>
       <div class="carousel-item">
         <img
-          src="photo-1620325867502-221cfb5faa5f.avif"
+          src="images/photo-1620325867502-221cfb5faa5f.avif"
           class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
@@ -473,32 +473,32 @@ p {
         <h1>Zippy Team</h1>
         <div class="team-members">
             <div class="team-member">
-                <img src="a1.avif"alt= "Sara Johnson">
+                <img src="images/a1.avif"alt= "Sara Johnson">
                 <h3>SARA JOHNSON</h3>
                 <p>Creative Head</p>
             </div>
             <div class="team-member">
-                <img src="a2.avif" alt="Matt Alex">
+                <img src="images/a2.avif" alt="Matt Alex">
                 <h3>MATT ALEX</h3>
                 <p>Art Director</p>
             </div>
             <div class="team-member">
-                <img src="a3.avif" alt="Chris Philips">
+                <img src="images/a3.avif" alt="Chris Philips">
                 <h3>CHRIS PHILIPS</h3>
                 <p>Senior Designer</p>
             </div>
             <div class="team-member">
-                <img src="a4.avif" alt="Jimmy Smith">
+                <img src="images/a4.avif" alt="Jimmy Smith">
                 <h3>JIMMY SMITH</h3>
                 <p>Marketing Manager</p>
             </div>
             <div class="team-member">
-                <img src="a5.avif" alt="Aliza">
+                <img src="images/a5.avif" alt="Aliza">
                 <h3>ALIZA</h3>
                 <p>SEO Monster</p>
             </div>
             <div class="team-member">
-                <img src="a6.avif" alt="Celien John">
+                <img src="images/a6.avif" alt="Celien John">
                 <h3>CELIEN JOHN</h3>
                 <p>Senior Designer</p>
             </div>
@@ -510,7 +510,7 @@ p {
     <h2>My projects</h2>
     <div class="container">
         <div class="card">
-            <div class="image-placeholder" style="background-image: url('photo-1620325867502-221cfb5faa5f.avif');"></div>
+            <div class="image-placeholder" style="background-image: url('images/photo-1620325867502-221cfb5faa5f.avif');"></div>
             <div class="content green">
                 <h3>Project Name</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nobis quas sed, sequi facilis molestiae laudantium dicta? Reiciendis sit, enim dicta culpa quisquam dolorum dolore? Laborum sint cumque porro veritatis!</p>
@@ -518,7 +518,7 @@ p {
             </div>
         </div>
         <div class="card">
-            <div class="image-placeholder" style="background-image: url('premium_photo-1661290256778-3b821d52c514.avif');"></div>
+            <div class="image-placeholder" style="background-image: url('images/premium_photo-1661290256778-3b821d52c514.avif');"></div>
             <div class="content purple">
                 <h3>Project Name</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nobis quas sed, sequi facilis molestiae laudantium dicta? Reiciendis sit, enim dicta culpa quisquam dolorum dolore? Laborum sint cumque porro veritatis!</p>
@@ -526,7 +526,7 @@ p {
             </div>
         </div>
         <div class="card">
-            <div class="image-placeholder" style="background-image: url(photo-1620325867502-221cfb5faa5f.avif)"></div>
+            <div class="image-placeholder" style="background-image: url(images/photo-1620325867502-221cfb5faa5f.avif)"></div>
             <div class="content green">
                 <h3>Project Name</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nobis quas sed, sequi facilis molestiae laudantium dicta? Reiciendis sit, enim dicta culpa quisquam dolorum dolore? Laborum sint cumque porro veritatis!</p>
@@ -534,7 +534,7 @@ p {
             </div>
         </div>
         <div class="card">
-            <div class="image-placeholder" style="background-image: url('premium_photo-1661290256778-3b821d52c514.avif');"></div>
+            <div class="image-placeholder" style="background-image: url('images/premium_photo-1661290256778-3b821d52c514.avif');"></div>
             <div class="content purple">
                 <h3>Project Name</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nobis quas sed, sequi facilis molestiae laudantium dicta? Reiciendis sit, enim dicta culpa quisquam dolorum dolore? Laborum sint cumque porro veritatis!</p>
